fixed a bug where target passphrase text did not properly wrap. Fixed a bug where changing passphrase did not update the popup

--- a/styles.css
+++ b/styles.css
@@ -217,9 +217,11 @@ textarea::placeholder {
     background-color: darkgray;
     border-radius: 5px;
     width: max-content;
+    max-width: 80%;
     padding: 10px;
     margin: 10px;
     font-size: 16px;
+    word-wrap: break-word;
 }
 legend{
     font-size: 20px;
